--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -7,7 +7,7 @@
     "module": "CommonJS",
     "noEmit": true,
     "paths": {
-      "react-native-module-template": ["../src"]
+      "react-native-sign": ["../src"]
     },
     "skipLibCheck": true,
     "strict": true,
